--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
 
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target"
+	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target col-sm-12"
 		id="ftco-navbar">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Livingstone Ayehangane<span>.</span></a>
